[project]
name = "canvas-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kagastyaraju", email = "kagastyaraju@ucsd.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "icalendar>=7.1.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
