[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvas-tracker"
version = "0.1.0"
description = "CLI tool that shows your upcoming Canvas assignments every time you open your terminal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "icalendar>=6.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
canvas-tracker = "canvas_tracker.cli:main"